--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:file:/data/project_management
+    url: jdbc:h2:file:./data/project_management
     username: root
     password: root
     driverClassName: org.h2.Driver
